removed pwa stuff + added autoplay for slides

--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -17,6 +17,9 @@ font-color: white;
 }
 a,a:hover{
 text-decoration: none;
+color: black;
+}
+.white{
 color: white;
 }
 .caption-banner {
@@ -254,7 +257,9 @@ background-color: #0d6efd;
 			    stretch: 0,
 			    depth: 100,
 			    modifier: 1,
-			    autoplay: {delay: 2},
+			    autoplay:  {
+			      delay: 1000,
+			    },
 			    slideShadows: false,
 			  },
 			    pagination: {
@@ -263,6 +268,7 @@ background-color: #0d6efd;
 				clickable: true,
 			    }
 			});
+                        promotionsSwiper.autoplay.start();
 
                } else {
 
