--- a/premio_cms/templates/location_card_horizontal.html
+++ b/premio_cms/templates/location_card_horizontal.html
@@ -8,7 +8,7 @@
         </a>
         <div class="card-body card-color" style="height: 25vh;">
             <h6 class="card-title">{{ page.title }}</h6>
-            <button class="color-fluid" ><a href="{% pageurl page %}" class="mt-1 white-text">Learn more</a></button> 
+            <button class="color-fluid" ><a href="{% pageurl page %}" class="mt-1 white-text white">Learn more</a></button> 
         </div>
     </div>
 </div>
