--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -9,7 +9,7 @@
                 <div class="card-body card-color" style="height: 15vh;">
                     <h5 class="card-title">{{ promoted_page.title }}</h5>
                     <button class="color-fluid">
-                        <a href="{% pageurl promoted_page %}" class="mt-2">Learn more</a>
+                        <a href="{% pageurl promoted_page %}" class="mt-2 white">Learn more</a>
                     </button>
                 </div>
             </div>
