--- a/premio_cms/templates/location_card_desktop.html
+++ b/premio_cms/templates/location_card_desktop.html
@@ -6,7 +6,7 @@
         </a>
         <div class="card-body card-color" style="height: 15vh;">
             <h5 class="card-title">{{ page.title }}</h5>
-            <button class="color-fluid"><a href="{% pageurl page %}" class="mt-1 white-text">Learn more</a></button>
+            <button class="color-fluid"><a href="{% pageurl page %}" class="mt-1 white-text white">Learn more</a></button>
         </div>
     </div>
 </div>
