--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags lazyimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags static %}
 
 {% block body_class %}template-locationpage{% endblock %}
 
@@ -18,7 +18,7 @@
             </style>
             <a href="{{ page.get_parent.url }}">
                 <div class="premio-back-btn premio-back-btn anm fdr">
-                    <img src="https://img.icons8.com/android/96/000000/back.png" width="15px" height="15px"/>
+                    <img src="{% static 'img/back.png' %}" width="15px" height="15px"/>
                 </div>
             </a>
             <div class="swiper-location-page-images">
@@ -104,7 +104,7 @@
             </style>
             <div class="mt-3 mb-3">
                 <a href="{{ page.get_parent.url }}">
-                    <img class="ml-3" src="https://img.icons8.com/android/96/000000/back.png" width="30px" height="30px"/>
+                    <img class="ml-3" src="{% static 'img/back.png'%}" width="30px" height="30px"/>
                 </a>
             </div>
             {% lazy_image page.main_image fill-2000x2000-c100 class="desktop-location-page-img lazy" %}
